// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email must be unique: {message:'email taken'} 1`] = `
Object {
  "message": "email taken",
}
`;

exports[`email required to register: {message: "email can't be blank"} 1`] = `
Object {
  "message": "email can't be blank",
}
`;

exports[`password required to register: {message:"password can't be blank"} 1`] = `
Object {
  "message": "password can't be blank",
}
`;
